MIR-1242 make MIR compatible with Java 21